--- a/styl.css
+++ b/styl.css
@@ -23,7 +23,50 @@ body > header {
   width: 100%;
   z-index: 1;
 }
-
+#logo {
+  background: url('obrazky/coding.png') no-repeat;
+  background-size: 40px 40px;
+  height: 40px;
+  margin: auto 0 auto 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#logo > * {
+  margin: 0 0 0 50px;
+}
+#logo h1 {
+  font-weight: normal;
+  font-size: 1.5em;
+  line-height: 1.2em;
+  color: white;
+}
+#logo h1 span {
+  font-weight: bold;
+  text-transform: uppercase;
+}
+nav ul {
+  margin: 0;
+  height: 100%;
+  align-items: center;
+  list-style-type: none;
+  display: flex;
+}
+nav ul li {
+  padding: 0 25px;
+  margin: 0 5px;
+  font-size: 1em;
+  line-height: 4.3em;
+}
+nav ul a {
+  color: white;
+  padding: 8px 0;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+nav ul a:hover, .aktivni a {
+  border-bottom: 2px solid #EF6534;
+}
 body {
   font-family: "Poppins";
   font-size: 14px;
