--- a/styl.css
+++ b/styl.css
@@ -8,7 +8,14 @@
   src: url(fonty/Poppins-ExtraBold.ttf);
   font-weight: bold;
 }
-
+table {
+  border: none;
+}
+#dovednosti td {
+  width: 33%;
+  padding: 10px;
+  vertical-align: top;
+}
 body {
   background: #f9f9f9;
   color: #414042;
